[package]
name = "mindx-v"
version = "0.1.0"
edition = "2021"
description = "edge ligth vectordatabase. based on hnsw-algorithms"
repository = "https://github.com/mind-x/mvd"

[lib]
name = "mindx-v"
crate-type = ["lib", "cdylib"]

[dependencies]
sled = "0.34.7"
rayon = "1.8.0"
parking_lot = "0.12.1"
ordered-float = "4.2.0"
rand = "0.8.5"
simsimd = "4.3.1"
serde = { version = "1.0.193", features = ["derive"] }
serde-big-array = "0.5.1"
bincode = "1.3.3"
pyo3 = { version = "0.20.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
jemallocator = "0.5.4"
jemalloc-ctl = "0.5.4"

[features]
py = ["dep:pyo3"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[[bench]]
name = "benchmark"
path = "bench/main.rs"
harness = false
